[package]
name = "tokio-maybe-tls"
version = "0.1.0"
authors = ["Jakob Schikowski"]
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "Wrapper for plain or TLS streams"
keywords = ["tokio", "tls"]
categories = ["asynchronous", "network-programming"]
repository = "https://github.com/jakoschiko/tokio-maybe-tls"
edition = "2021"

[features]
std = []
tokio = ["dep:tokio"]
futures = ["dep:futures-io"]

[dependencies]
futures-io = { version = "0.3.31", default-features = false, optional = true }
tokio = { version = "1.41.0", default-features = false, optional = true }

[dev-dependencies]
async-native-tls = "0.5.0"
async-std = { version = "1.13.0", features = ["attributes"] }
byte_string = "1.0.0"
futures-rustls = { version = "0.26.0", default-features = false }
native-tls = "0.2.12"
rustls = "0.23.16"
rustls-platform-verifier = "0.4.0"
tokio = { version = "*", default-features = true, features = ["full"] }
tokio-maybe-tls = { path = ".", features = ["std", "tokio", "futures"] }
tokio-native-tls = { version = "*", default-features = true }
tokio-rustls = { version = "*", default-features = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
