[package]
name = "tokio-maybe-tls"
version = "0.1.0"
authors = ["Jakob Schikowski"]
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "Wrapper for plain or TLS streams"
keywords = ["tokio", "tls"]
categories = ["asynchronous", "network-programming"]
repository = "https://github.com/jakoschiko/tokio-maybe-tls"
edition = "2021"

[features]
default = []

async-native-tls = ["dep:async-native-tls", "dep:futures-io"]
futures-rustls = ["dep:futures-io", "dep:futures-rustls"]
tokio-native-tls = ["dep:tokio-native-tls", "dep:tokio"]
tokio-rustls = ["dep:tokio-rustls", "dep:tokio"]

[dependencies]
async-native-tls = { version = "0.5", optional = true }
futures-io = { version = "0.3", optional = true }
futures-rustls = { version = "0.26", default-features = false, optional = true }
native-tls = { version = "0.2", optional = true }
rustls = { version = "0.23", optional = true }
tokio = { version = "1.41.1", default-features = false, optional = true }
tokio-native-tls = { version = "0.3", default-features = true, optional = true }
tokio-rustls = { version = "0.26", default-features = true, optional = true }

[dev-dependencies]
async-std = { version = "1.13.0", features = ["attributes"] }
byte_string = "1.0.0"
rustls-platform-verifier = "0.4.0"
tokio = { version = "*", default-features = true, features = ["full"] }
tokio-maybe-tls = { path = ".", features = ["rustls", "native-tls", "tokio-rustls", "tokio-native-tls", "futures-rustls", "async-native-tls"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
